# intents_classification_for_neural_text_generation

./: .gitignore  .gitmodules  LICENSE  Projet.ipynb  README.md  pyproject.toml  requirements.txt
intents_classification/: Intent_classification_for_neural_text_generation.ipynb  Intent_classification_for_neural_text_generation_from_scratch.ipynb  __main__.py  bert_tiny.ipynb  clean_dataset.ipynb  intent_classification_for_neural_text_generation_from_scratch.py  main.py  model.py
intents_classification/data/: dataset.csv  validation_dataset.csv
intents_classification/datasets/: __init__.py  custom_data.py  silicone_datasets.py
intents_classification/drafts_datasets/: Intent_classification.ipynb  Intent_classification_scratch.ipynb  bert_tiny.ipynb  clean_dataset.ipynb  intent_classification_scratch.py  main.py
intents_classification/loaders/: __init__.py  dataset_loader.py  model_loader.py
intents_classification/models/: __init__.py  baseline.py  multi_layers_perceptron.py
intents_classification/models/Bert/: __init__.py  bert.py
intents_classification/models/Roberta/: __init__.py  roberta.py
intents_classification/models/bert_tiny/: config.json
intents_classification/tester/: tester.py
intents_classification/trainer/: __init__.py  dataset_uploader.py  model_loader.py  trainer.py  utils.py
