[tool.poetry]
name = "intents_classification"
version = "0.1.0"
description = ""
authors = ["Yoan Gabison <yoan.gabison@student-cs.fr>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
tqdm = "^4.65.0"
nltk = "^3.8.1"
gensim = "^4.3.1"
pandas = "^1.5.3"
termcolor = "^2.2.0"
datasets = "^2.10.1"
numpy = "^1.24.2"
torch = "^2.0.0"
scikit-learn = "^1.2.2"
transformers = "^4.27.2"
matplotlib = "^3.7.1"
torchtext = "^0.15.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
